; ModuleID = '/home/carl/AnghaBench/git/extr_combine-diff.c_find_paths_multitree.c'
source_filename = "/home/carl/AnghaBench/git/extr_combine-diff.c_find_paths_multitree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.combine_diff_path = type { %struct.combine_diff_path* }
%struct.object_id = type { i32 }
%struct.oid_array = type { i32, %struct.object_id* }
%struct.diff_options = type { i32 }
%struct.strbuf = type { i32 }

@PATH_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.combine_diff_path* (%struct.object_id*, %struct.oid_array*, %struct.diff_options*)* @find_paths_multitree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.combine_diff_path* @find_paths_multitree(%struct.object_id* %0, %struct.oid_array* %1, %struct.diff_options* %2) #0 {
  %4 = alloca %struct.object_id*, align 8
  %5 = alloca %struct.oid_array*, align 8
  %6 = alloca %struct.diff_options*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.object_id**, align 8
  %10 = alloca %struct.combine_diff_path, align 8
  %11 = alloca %struct.strbuf, align 4
  store %struct.object_id* %0, %struct.object_id** %4, align 8
  store %struct.oid_array* %1, %struct.oid_array** %5, align 8
  store %struct.diff_options* %2, %struct.diff_options** %6, align 8
  %12 = load %struct.oid_array*, %struct.oid_array** %5, align 8
  %13 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  store i32 %14, i32* %8, align 4
  %15 = load %struct.object_id**, %struct.object_id*** %9, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @ALLOC_ARRAY(%struct.object_id** %15, i32 %16)
  store i32 0, i32* %7, align 4
  br label %18

18:                                               ; preds = %33, %3
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %36

22:                                               ; preds = %18
  %23 = load %struct.oid_array*, %struct.oid_array** %5, align 8
  %24 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %23, i32 0, i32 1
  %25 = load %struct.object_id*, %struct.object_id** %24, align 8
  %26 = load i32, i32* %7, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.object_id, %struct.object_id* %25, i64 %27
  %29 = load %struct.object_id**, %struct.object_id*** %9, align 8
  %30 = load i32, i32* %7, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.object_id*, %struct.object_id** %29, i64 %31
  store %struct.object_id* %28, %struct.object_id** %32, align 8
  br label %33

33:                                               ; preds = %22
  %34 = load i32, i32* %7, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %7, align 4
  br label %18

36:                                               ; preds = %18
  %37 = getelementptr inbounds %struct.combine_diff_path, %struct.combine_diff_path* %10, i32 0, i32 0
  store %struct.combine_diff_path* null, %struct.combine_diff_path** %37, align 8
  %38 = load i32, i32* @PATH_MAX, align 4
  %39 = call i32 @strbuf_init(%struct.strbuf* %11, i32 %38)
  %40 = load %struct.object_id*, %struct.object_id** %4, align 8
  %41 = load %struct.object_id**, %struct.object_id*** %9, align 8
  %42 = load i32, i32* %8, align 4
  %43 = load %struct.diff_options*, %struct.diff_options** %6, align 8
  %44 = call i32 @diff_tree_paths(%struct.combine_diff_path* %10, %struct.object_id* %40, %struct.object_id** %41, i32 %42, %struct.strbuf* %11, %struct.diff_options* %43)
  %45 = call i32 @strbuf_release(%struct.strbuf* %11)
  %46 = load %struct.object_id**, %struct.object_id*** %9, align 8
  %47 = call i32 @free(%struct.object_id** %46)
  %48 = getelementptr inbounds %struct.combine_diff_path, %struct.combine_diff_path* %10, i32 0, i32 0
  %49 = load %struct.combine_diff_path*, %struct.combine_diff_path** %48, align 8
  ret %struct.combine_diff_path* %49
}

declare dso_local i32 @ALLOC_ARRAY(%struct.object_id**, i32) #1

declare dso_local i32 @strbuf_init(%struct.strbuf*, i32) #1

declare dso_local i32 @diff_tree_paths(%struct.combine_diff_path*, %struct.object_id*, %struct.object_id**, i32, %struct.strbuf*, %struct.diff_options*) #1

declare dso_local i32 @strbuf_release(%struct.strbuf*) #1

declare dso_local i32 @free(%struct.object_id**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
